# serializer version: 1
# name: test_device_scanner_created
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Banana',
      <DeviceTrackerEntityStateAttribute.HOST_NAME: 'host_name'>: 'testhost',
      'in_zones': list([
        'zone.home',
      ]),
      <DeviceTrackerEntityStateAttribute.IP: 'ip'>: '192.168.1.102',
      <DeviceTrackerEntityStateAttribute.MAC: 'mac'>: '2C-71-FF-ED-34-83',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.banana',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'home',
  })
# ---
# name: test_device_scanner_update_to_away_nulls_properties
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Banana',
      'in_zones': list([
      ]),
      <DeviceTrackerEntityStateAttribute.MAC: 'mac'>: '2C-71-FF-ED-34-83',
      <DeviceTrackerEntityStateAttribute.SOURCE_TYPE: 'source_type'>: <SourceType.ROUTER: 'router'>,
      <DeviceTrackerEntityCapabilityAttribute.TRACKING_TYPE: 'tracking_type'>: <TrackingType.CONNECTION: 'connection'>,
    }),
    'context': <ANY>,
    'entity_id': 'device_tracker.banana',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'not_home',
  })
# ---
